# CorePartitioning

./: .affinity.c.swo  .built-in.o.cmd  .simple_proc.mod.o.cmd  CMakeLists.txt  Makefile  README.md  affinity.c  affinity.c~  build.sh  data_types.h  debug.h  fdtable.c  fdtable.h  ipc.c  ipc.h  ld_preload.c  ld_preload.h  print.c  print.h  test.sh
simple_proc_ktimer/: .Module.symvers.cmd  .built-in.a.cmd  .built-in.o.cmd  .modules.order.cmd  .simple_proc.ko.cmd  .simple_proc.mod.cmd  .simple_proc.mod.o.cmd  .simple_proc.o.cmd  Makefile  diff_simple  modules.order  simple_proc.c  simple_proc.ko  simple_proc.mod  simple_proc.mod.c  simple_proc_app.ko  simple_proc_cross.ko  simple_proc_per.ko  simple_proc_single.ko
simple_proc_ktimer/.tmp_versions/: simple_proc.mod
simple_proc_ktimer_with_app/: .simple_proc.ko.cmd  modules.order  simple_proc_app.c
